<resources>
    <string name="app_name" translatable="false">OBDroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="unknown_bt_name">Unknown Device</string>
    <string name="connection_failed_string">Connection Failed</string>
    <string name="settings">Settings</string>
    <string name="connection">Connection</string>
    <string name="theme_picker_title">Theme selection</string>
    <string name="exit">Exit</string>
    <string name="main_view">Diagnostic</string>
    <string name="bound_bt_device">Bound BT Device</string>
    <string name="connect_to_device">Connect to Device</string>
    <string name="notification_title" translatable="false">OBD Droid</string>
    <string name="shell_title">Shell</string>
    />
    <string name="content_text_notification">OBDroid running</string>
    <string name="dash_board">Dash Board</string>
    <string name="trouble_codes">Troubles</string>
    <string name="sensors">Sensors</string>
    <string name="terminal_pref_title">Enable shell (For advanced users)</string>
    <string name="wifi_settings_title">Wifi Settings</string>
    <string name="prefs_toolbar_title">Settings</string>
    <string name="bluetooth_permission">Bluetooth permission</string>
    <string name="location_permission">Location permission</string>
    <string name="save_data_permission">Save Data permission</string>
    <string name="battery_optimisation">Battery optimisation</string>
    <string name="about">About</string>
    <string name="show_only_supported_commands">Show Only Supported Commands</string>
    <string name="profiles_standard_by_default">Profiles (Standard by Default)</string>
    <string name="use_warm_starts_title">Use Warm Starts On Connection With Obd Device</string>
    <string name="connect_to_network">Connect to Network</string>
    <string name="cancel">Cancel</string>
    <string name="port_hint" translatable="false">9999</string>
    <string name="getaway_hint" translatable="false">192.00.00.00</string>
    <string name="all_cat">All</string>
    <string name="common_cat">Common</string>
    <string name="diesel_cat">Diesel</string>
    <string name="electric_cat">Electrical</string>
    <string name="oxygen_sensors_cat">Oxygen Sensors</string>
    <string name="vehicle_info_cat">Vehicle Info</string>
    <string name="favorites_commands_toolbar_title">Favorites</string>
    <string name="categories">Categories</string>
    <string name="temperature">Temperature</string>
    <string name="fuel_injection">Fuel Injection</string>
    <string name="air_flow">Air Flow</string>
    <string name="throttle">Throttle</string>
    <string name="turbo">Turbo Charger</string>
    <string name="add_fav">Add to Favorites</string>
    <string name="remove_fav">Remove From Favorites</string>
    <string name="show_extended_description">Extended Description</string>
    <string name="no_troubles_detected">No Troubles Detected</string>
    <string name="clear_troubles">Clear Troubles</string>
    <string name="default_obd_protocol">Default OBD Protocol</string>
    <string name="add_profile">Add Profile</string>
    <string name="help">Help</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="profile_name">Profile Name</string>
    <string name="settings_chain">Settings Chain</string>
    <string name="commands_chain">Commands Chain</string>
    <string name="exit_message">Exit from application?</string>
    <string name="enter_name_and_settings">Enter name and settings, please</string>
    <string name="obd_protocol_title">OBD protocol:</string>
    <string name="select_profile_message">Select this profile?</string>
    <string name="connections_title">Available Devices</string>
    <string name="disconnect">Disconnect</string>
    <string name="send">Send</string>
    <string name="enter_command_hint">Enter command</string>
    <string name="shell_themes">Shell themes</string>
    <string name="fast_bt_connect">Fast bluetooth connect</string>
    <string name="fast_wf_connect">Fast wifi connect</string>
    <string name="fast_connections">Fast connect</string>
    <string name="bt_connected_title">Device connected</string>
    <string name="bt_connecting_title">Device connecting</string>
    <string name="bt_connected_message">Device %s was connected</string>
    <string name="about_obd_droid_text">\nOBDroid version %s\nAuthor Barinov Pavel\nFor suggestions and comments, please contact me\n\nbarinovp363@gmail.com\n\nwww.linkedin.com/in/pavel-barinov-017841236</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="graphic_fragment_title">Graphic</string>
    <string name="simple_view_fragment_title">Current value</string>
    <string name="widget_view_fragment_title">Widget value</string>
    <string name="bad_bt_rssi_signal">Bad signal</string>
    <string name="mid_bt_rssi_signal">Medium signal</string>
    <string name="good_bt_rssi_signal">Strong signal</string>
    <string name="on_cant_connect">Connection lost or failed to connect</string>
    <string name="bound_bt_title">Paired devices</string>
    <string name="pro_mode_menu_title">Activate advanced settings</string>
    <string name="no_paired_devices_yet">No paired devices</string>
    <string name="diagnostic_fragment_title">Troubles scanning</string>
    <string name="sensors_fragment_title">Sensor data</string>
    <string name="trouble_history">Detected troubles history</string>
    <string name="troubles_data_base">Troubles data base</string>
    <string name="connection_state">Connection state</string>
    <string name="search_item_menu_title">Search</string>
    <string name="all_troubles">All</string>
    <string name="fuel_and_air_troubles">Fuel and air</string>
    <string name="ignition_troubles">Ignition</string>
    <string name="emission_troubles">Emission</string>
    <string name="ecu_and_aux_troubles">Ecu and aux</string>
    <string name="transmission_troubles">Transmission</string>
    <string name="chassis_troubles">Chassis</string>
    <string name="common_troubles">Common</string>
    <string name="title_trouble_type">Trouble code type</string>


    <string-array name="available_profiles" translatable="false">
        <item name="profile_undefined">Auto</item>
        <item name="profile_sae_1850_pwm">SAE J1850 PWM</item>
        <item name="profile_sae_1850_vpw">SAE J1850 VPW</item>
        <item name="profile_iso9141">ISO 9141 2</item>
        <item name="profile_iso14230">ISO 14230 4 5kb</item>
        <item name="profile_iso14230f">ISO 14230 4 FAST INIT</item>
        <item name="profile_iso15765_11_500">ISO 15765 4 CAN 11bit ID 500kb</item>
        <item name="profile_iso15765_29_500">ISO_15765 4 CAN_29 bit ID 500kb</item>
        <item name="profile_iso15765_11_250">ISO 15765 4 CAN 11 bit ID 250kb</item>
        <item name="profile_iso15765_29_250">ISO 15765 4 CAN_29 bit ID 250kb</item>
        <item name="profile_sae_j1939">SAE J1939 CAN 29 bit ID 250kb</item>
    </string-array>

    <string-array name="shell_themes_arr">
        <item name="profile_undefined">Default</item>
        <item name="profile_sae_1850_pwm">Dark</item>
        <item name="profile_sae_1850_vpw">Garnet</item>
    </string-array>
</resources>