<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/enable_bt_item"
        android:icon="@drawable/bt_logo"
        android:title="@string/enable_bluetooth"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/connection_icon_item"
        android:title="Connection item"
        app:showAsAction="always"
        android:visible="false"
        />

    <item
        android:id="@+id/enable_wifi_item"
        android:icon="@drawable/wifi_logo"
        android:title="Wifi"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/simple_connection"
        android:title="@string/fast_connections"
        app:showAsAction="collapseActionView">

        <menu>
            <item
                android:id="@+id/bt_connect"
                android:title="@string/fast_bt_connect"
                app:showAsAction="collapseActionView" />


            <item
                android:id="@+id/wf_connect"
                android:title="@string/fast_wf_connect"
                app:showAsAction="collapseActionView" />

        </menu>

    </item>


</menu>