<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/permissionsFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="ru.barinov.obdroid.HomeFragment"
        android:label="@string/dash_board" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ru.barinov.obdroid.ui.settings.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settingsFragment_to_profilesFragment"
            app:destination="@id/profilesFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_wifiSettingsDialog"
            app:destination="@id/wifiSettingsDialog" />
    </fragment>
    <fragment
        android:id="@+id/connectionsFragment"
        android:name="ru.barinov.obdroid.ui.connectionsFragment.ConnectionsFragment"
        android:label="@string/connections_title">
        <action
            android:id="@+id/action_connectionsFragment_to_wifiSettingsDialog"
            app:destination="@id/wifiSettingsDialog"
            app:launchSingleTop="false" />
        <action
            android:id="@+id/action_connectionsFragment_to_onBtConnectionDialog"
            app:destination="@id/onBtConnectionDialog" />
    </fragment>
    <fragment
        android:id="@+id/shellFragment"
        android:name="ru.barinov.obdroid.ShellFragment"
        android:label="@string/shell_title" />
    <fragment
        android:id="@+id/permissionsFragment"
        android:name="ru.barinov.obdroid.ui.startFragment.PermissionsFragment"
        android:label="PermissionsFragment" >
        <action
            android:id="@+id/action_permissionsFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/permissionsFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/profilesFragment"
        android:name="ru.barinov.obdroid.ui.profilesListFragment.ProfilesFragment"
        android:label="ProfilesFragment" >
        <action
            android:id="@+id/action_profilesFragment_to_profileCreationFragment"
            app:destination="@id/profileCreationFragment" />
    </fragment>
    <dialog
        android:id="@+id/wifiSettingsDialog"
        android:name="ru.barinov.obdroid.WifiSettingsDialog"
        android:label="WifiSettingsDialog" />
    <dialog
        android:id="@+id/profileCreationFragment"
        android:name="ru.barinov.obdroid.ui.profileCreation.ProfileCreationFragment"
        android:label="ProfileCreationFragment" />
    <dialog
        android:id="@+id/aboutDialogFragment"
        android:name="ru.barinov.obdroid.ui.AboutDialogFragment"
        android:label="AboutDialogFragment" />
    <dialog
        android:id="@+id/onBtConnectionDialog"
        android:name="ru.barinov.obdroid.ui.connectionsFragment.bindedDialogs.OnBtConnectionDialog"
        android:label="OnBtConnectionDialog" />
</navigation>