<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/reversed_fragment_common_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/getaway_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:hintTextColor="@color/hint_color"
            app:boxStrokeColor="@color/dark_green"
            app:layout_constraintEnd_toStartOf="@id/port_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/getaway_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/getaway_hint"
                android:inputType="number"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/port_field"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:hintTextColor="@color/hint_color"
            app:boxStrokeColor="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/port_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port_hint"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="5"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negative_button"
            style="?attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTintMode="src_in"
            app:layout_constraintEnd_toStartOf="@id/positive_button"
            app:layout_constraintTop_toBottomOf="@id/port_field" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive_button"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/mid_green"
            android:enabled="false"
            android:text="@android:string/ok"
            android:textColor="@color/positive_button_selector"
            android:textSize="18sp"
            app:backgroundTintMode="src_atop"
            app:layout_constraintEnd_toEndOf="@id/port_field"
            app:layout_constraintTop_toBottomOf="@id/port_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
